--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "redux-saga": "^1.1.3"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
